modification test 5% discount